<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Rojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cambiarRojo"
        android:text="@string/Rojo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/Amarillo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cambiarAmarillo"
        android:text="@string/Amarillo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rojo"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/Url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buscador"
        android:text="@string/Url"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Amarillo"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/ResultBotton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Numero2"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/Resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ResultBotton"
        app:layout_constraintTop_toBottomOf="@+id/Numero2"
        app:layout_constraintVertical_bias="0.07999998"
        tools:text="@string/Resultado" />

    <EditText
        android:id="@+id/Numero1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:singleLine="false"
        android:text="@string/Numero1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Url"
        app:layout_constraintVertical_bias="0.050000012"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/Numero2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/Numero2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Numero1"
        app:layout_constraintVertical_bias="0.050000012"
        android:autofillHints="" tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>